fixed overflow bar issues

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -56,11 +56,13 @@
 
 .bracket {
   position: absolute;
-  left: 0.5rem;
-  top: 2rem;
-  font-size: 10rem;
+  left: -0.5rem;
+  top: 0.5rem;
+  font-size: 14rem;
   color: #333;
   line-height: 1;
+  transform: scaleX(0.5);
+  transform-origin: left center;
 }
 
 .staves {
